--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
-<p>VITB ID-Based Access Control</p>
-<button type='button' onclick='init()'>Start</button>
-<div id='webcam-container'></div>
-<div id='label-container'></div>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.3/dist/teachablemachine-image.min.js"></script>
-<script type="text/javascript">
-    const URL = './model/';
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Team Protect Tool 2</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <p>VITB ID-Based Access Control</p>
+    <button type="button" onclick="init()">Start</button>
+    <div id="webcam-container"></div>
+    <div id="result"></div>
+    <div id="label-container"></div>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.3/dist/teachablemachine-image.min.js"></script>
+    <script type="text/javascript">
+      const URL = "./model/";
 
-    let model, webcam, labelContainer, maxPredictions;
+      let model, webcam, labelContainer, maxPredictions;
 
-    let isIos = false; 
-    // fix when running demo in ios, video will be frozen;
-    if (window.navigator.userAgent.indexOf('iPhone') > -1 || window.navigator.userAgent.indexOf('iPad') > -1) {
-      isIos = true;
-    }
-    // Load the image model and setup the webcam
-    async function init() {
-        const modelURL = URL + 'model.json';
-        const metadataURL = URL + 'metadata.json';
+      let isIos = false;
+      // fix when running demo in ios, video will be frozen;
+      if (
+        window.navigator.userAgent.indexOf("iPhone") > -1 ||
+        window.navigator.userAgent.indexOf("iPad") > -1
+      ) {
+        isIos = true;
+      }
+      // Load the image model and setup the webcam
+      async function init() {
+        const modelURL = URL + "model.json";
+        const metadataURL = URL + "metadata.json";
 
         // load the model and metadata
         // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
@@ -27,50 +40,81 @@
 
         // Convenience function to setup a webcam
         const flip = true; // whether to flip the webcam
-        const width = 200;
-        const height = 200;
+        const width = 300;
+        const height = 300;
         webcam = new tmImage.Webcam(width, height, flip);
         await webcam.setup(); // request access to the webcam
 
         if (isIos) {
-            document.getElementById('webcam-container').appendChild(webcam.webcam); // webcam object needs to be added in any case to make this work on iOS
-            // grab video-object in any way you want and set the attributes
-            const webCamVideo = document.getElementsByTagName('video')[0];
-            webCamVideo.setAttribute("playsinline", true); // written with "setAttribute" bc. iOS buggs otherwise
-            webCamVideo.muted = "true";
-            webCamVideo.style.width = width + 'px';
-            webCamVideo.style.height = height + 'px';
+          document
+            .getElementById("webcam-container")
+            .appendChild(webcam.webcam); // webcam object needs to be added in any case to make this work on iOS
+          // grab video-object in any way you want and set the attributes
+          const webCamVideo = document.getElementsByTagName("video")[0];
+          webCamVideo.setAttribute("playsinline", true); // written with "setAttribute" bc. iOS buggs otherwise
+          webCamVideo.muted = "true";
+          webCamVideo.style.width = width + "px";
+          webCamVideo.style.height = height + "px";
         } else {
-            document.getElementById("webcam-container").appendChild(webcam.canvas);
+          document
+            .getElementById("webcam-container")
+            .appendChild(webcam.canvas);
         }
         // append elements to the DOM
-        labelContainer = document.getElementById('label-container');
-        for (let i = 0; i < maxPredictions; i++) { // and class labels
-            labelContainer.appendChild(document.createElement('div'));
+        labelContainer = document.getElementById("label-container");
+        for (let i = 0; i < maxPredictions; i++) {
+          // and class labels
+          labelContainer.appendChild(document.createElement("div"));
         }
         webcam.play();
         window.requestAnimationFrame(loop);
-    }
+      }
 
-    async function loop() {
+      let dayscholarCount = 0, hostellerCount = 0;
+
+      async function loop() {
         webcam.update(); // update the webcam frame
         await predict();
         window.requestAnimationFrame(loop);
-    }
+      }
 
-    // run the webcam image through the image model
-    async function predict() {
+      // run the webcam image through the image model
+      async function predict() {
         // predict can take in an image, video or canvas html element
+        let webcamContainer = document.getElementById("webcam-container");
         let prediction;
         if (isIos) {
-            prediction = await model.predict(webcam.webcam);
+          prediction = await model.predict(webcam.webcam);
         } else {
-            prediction = await model.predict(webcam.canvas);
+          prediction = await model.predict(webcam.canvas);
         }
         for (let i = 0; i < maxPredictions; i++) {
-            const classPrediction =
-                prediction[i].className + ': ' + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
+          const classPrediction =
+            prediction[i].className +
+            ": " +
+            prediction[i].probability.toFixed(2);
+          labelContainer.childNodes[i].innerHTML = classPrediction;
         }
-    }
-</script>
+        if(prediction[1].probability.toFixed(2) > 0.9){
+            dayscholarCount += 1;
+            webcamContainer.classList.remove("invalid");
+            webcamContainer.classList.add("valid");          
+        } else {
+            webcamContainer.classList.remove("valid");
+            webcamContainer.classList.add("invalid");
+        }
+        if(prediction[0].probability.toFixed(2) > 0.9){
+            hostellerCount += 1;  
+        }
+        const resultDiv = document.getElementById("result");
+        if(dayscholarCount > 20){
+            resultDiv.textContent = "✅ ALLOW ENTRY + EXIT";
+            dayscholarCount = 0;
+        } else if(hostellerCount > 20){
+            resultDiv.textContent = "⛔️ ALLOW ENTRY ONLY";
+            hostellerCount = 0;
+        }
+      }
+    </script>
+  </body>
+</html>
